Overlay Next: Relationship Lines on Instances #130232

Closed
opened 2024-11-13 17:44:12 +01:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.11.7-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.40 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 18.1.8, DRM 3.59, 6.11.7-gentoo) AMD 4.6 (Core Profile) Mesa 24.2.6 Opengl Backend

Blender Version
Broken: version: 4.4.0 Alpha, branch: main (modified), commit date: 2024-11-13 10:37, hash: 582ea0eb406b
Worked: 4.3 as it did not expose overlay next

Short description of error
I have a parent object with several children in a collection.

When creating an Instance of that collection, all children objects in the Instances will have Relationship Lines pointing towards the original parent object.
This happens even though the relationship lines overlay is turned off. But even then they shouldn't point towards the original parent.

image

Exact steps for others to reproduce the error

  • Create an object in a collection
  • Duplicate the object several times and parent them to the first one
  • Right click on the collection and use 'Instance to Scene'
**System Information** Operating system: Linux-6.11.7-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.40 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 18.1.8, DRM 3.59, 6.11.7-gentoo) AMD 4.6 (Core Profile) Mesa 24.2.6 Opengl Backend **Blender Version** Broken: version: 4.4.0 Alpha, branch: main (modified), commit date: 2024-11-13 10:37, hash: `582ea0eb406b` Worked: 4.3 as it did not expose overlay next **Short description of error** I have a parent object with several children in a collection. When creating an Instance of that collection, all children objects in the Instances will have Relationship Lines pointing towards the original parent object. This happens even though the relationship lines overlay is turned off. But even then they shouldn't point towards the original parent. <img width="911" alt="image" src="attachments/ad61c0fe-add4-41ba-ae2f-35d1b72999ee"> **Exact steps for others to reproduce the error** - Create an object in a collection - Duplicate the object several times and parent them to the first one - Right click on the collection and use 'Instance to Scene'
250 KiB
Julien Kaspar added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-11-13 17:44:12 +01:00
Clément Foucault added the
Interest
Overlay
label 2024-11-13 17:44:59 +01:00
Member

I can confirm the issue here and have attached a file created in 4.2 for testing.

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090 NVIDIA Corporation NVIDIA 565.90 Vulkan Backend
Blender version: 4.4.0 Alpha, branch: main, commit date: 2024-11-13 20:36, hash: 9396c8f3887d

I can confirm the issue here and have attached a file created in 4.2 for testing. **System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090 NVIDIA Corporation NVIDIA 565.90 Vulkan Backend Blender version: 4.4.0 Alpha, branch: main, commit date: 2024-11-13 20:36, hash: `9396c8f3887d`
Alaska added
Module
Viewport & EEVEE
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-11-14 03:45:27 +01:00
Clément Foucault self-assigned this 2024-11-14 15:39:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-11-14 16:12:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#130232
No description provided.