Fix #130232: Overlay Next: Relationship Lines on Instances

Add missing conditional logic.